--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,8 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:minHeight="560dp"
+    android:layout_height="match_parent"
+    android:background="@drawable/space"
+    android:backgroundTint="#dfffffff"
+    android:backgroundTintMode="src_over"
     tools:context=".MainActivity">
 
     <TextView
@@ -12,7 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/initial_speed_value"
-        android:textSize="18sp"
+        android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/speedText"
@@ -23,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/initial_angle_value"
-        android:textSize="18sp"
+        android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/angleText"
@@ -35,6 +37,7 @@
         android:layout_height="wrap_content"
         android:onClick="openTrajectoryList"
         android:text="@string/list_of_coordinates"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/anim_button"
         app:layout_constraintHorizontal_bias="0.5"
@@ -48,6 +51,7 @@
         android:layout_height="wrap_content"
         android:onClick="openTrajectoryAnimation"
         android:text="@string/animation"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="@+id/list_button"
         app:layout_constraintEnd_toStartOf="@+id/graph_button"
         app:layout_constraintHorizontal_bias="0.5"
@@ -60,6 +64,7 @@
         android:layout_height="wrap_content"
         android:onClick="openTrajectoryGraph"
         android:text="@string/graph"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="@+id/anim_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -71,7 +76,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/switch_calculation"
-        android:textSize="18sp"
+        android:textSize="22sp"
+        android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/list_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -82,6 +88,8 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:max="200"
+        android:progressDrawable="@drawable/seek_bar"
+        android:thumb="@drawable/seek_thumb"
         app:layout_constraintBottom_toTopOf="@+id/angleText"
         app:layout_constraintTop_toBottomOf="@+id/speedText"
         tools:layout_editor_absoluteX="0dp" />
@@ -92,8 +100,9 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
         android:text="@string/spped_name"
-        android:textSize="18sp"
+        android:textSize="22sp"
         android:textStyle="bold"
+        android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/speed"
         app:layout_constraintEnd_toStartOf="@+id/speedValue"
         app:layout_constraintHorizontal_bias="0.5"
@@ -107,8 +116,9 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
         android:text="@string/angle_name"
-        android:textSize="18sp"
+        android:textSize="22sp"
         android:textStyle="bold"
+        android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/angle"
         app:layout_constraintEnd_toStartOf="@+id/angleValue"
         app:layout_constraintHorizontal_bias="0.5"
@@ -121,6 +131,8 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:max="90"
+        android:progressDrawable="@drawable/seek_bar"
+        android:thumb="@drawable/seek_thumb"
         app:layout_constraintBottom_toTopOf="@+id/switch1"
         app:layout_constraintStart_toStartOf="@+id/speed"
         app:layout_constraintTop_toBottomOf="@+id/angleText" />
