--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,7 +37,8 @@
         android:layout_height="wrap_content"
         android:onClick="openTrajectoryList"
         android:text="@string/list_of_coordinates"
-        android:textColor="#000000"
+        android:textSize="18sp"
+        style="@style/Widget.AppCompat.Button.Colored"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/anim_button"
         app:layout_constraintHorizontal_bias="0.5"
@@ -51,7 +52,8 @@
         android:layout_height="wrap_content"
         android:onClick="openTrajectoryAnimation"
         android:text="@string/animation"
-        android:textColor="#000000"
+        android:textSize="18sp"
+        style="@style/Widget.AppCompat.Button.Colored"
         app:layout_constraintBottom_toBottomOf="@+id/list_button"
         app:layout_constraintEnd_toStartOf="@+id/graph_button"
         app:layout_constraintHorizontal_bias="0.5"
@@ -64,7 +66,8 @@
         android:layout_height="wrap_content"
         android:onClick="openTrajectoryGraph"
         android:text="@string/graph"
-        android:textColor="#000000"
+        android:textSize="18sp"
+        style="@style/Widget.AppCompat.Button.Colored"
         app:layout_constraintBottom_toBottomOf="@+id/anim_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -73,11 +76,14 @@
 
     <Switch
         android:id="@+id/switch1"
-        android:layout_width="wrap_content"
+        android:layout_width="140dp"
         android:layout_height="wrap_content"
         android:text="@string/switch_calculation"
         android:textSize="22sp"
-        android:textColor="#000000"
+        android:textStyle="bold"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:textColor="#b4450e"
         app:layout_constraintBottom_toTopOf="@+id/list_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
